[package]
name = "rwm"
version = "0.1.0"
authors = ["DanielChabrowski <danchabrowski@gmail.com>"]
edition = "2021"

[dependencies]
xcb = { version = "1.1.1", features = ["xkb", "randr", "debug_atom_names"] }
xkbcommon = { version = "0.5.0-beta.0", features = ["x11"] }
log = "0.4.17"
env_logger = "0.9.0"
anyhow = "1.0.58"
